# latt_matcher

./: .gitignore  README.md  pyproject.toml
examples/: latmatcher_visual_tests.ipynb  plot_matched_vectors.py
latmatcher/: pyvenv.cfg
src/latmatcher/: bilayer.py  cif.py  cli.py  core.py  optim.py
tests/: test_bilayer_integration.py  test_cif_io.py  test_no_cif_core.py  test_optim_known_cases.py
web/: README.md
