[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "latmatcher"
version = "0.1.0"
description = "2D lattice matching via coverage maximisation, CIF utilities, bilayer builder"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["numpy>=1.23", "scipy>=1.10", "ase>=3.22", "matplotlib>=3.6"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
latmatcher = "latmatcher.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
